[tool.poetry]
name = "sliplaunch"
version = "0.2.0"
description = "Event prediction visualization"
authors = ["evogel"]

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^6.3.0"
Jinja2 = "^3.1.6"
pandas = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
